[Client] Add qml components and client state
Deleted extra files
Add clients states
Add qml component for client state "online"

--- a/src/Client/qml.qrc
+++ b/src/Client/qml.qrc
@@ -5,5 +5,6 @@
         <file>Design/ClientsList.qml</file>
         <file>Design/ClientsModel.qml</file>
         <file>Design/CallButton.qml</file>
+        <file>Design/Authotization.qml</file>
     </qresource>
 </RCC>
