[Client-Server] Corrections in UI and in Server
[client]:
 Bounded authorization button to client-request;
 Fixed several issues in ui;
 Redesigned Authorization item.
 Removed extra code.
[server]:
 Instead of stub server sends list of connected clients.

--- a/src/Client/qml.qrc
+++ b/src/Client/qml.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>Design/main.qml</file>
-        <file>Design/AuthorizationItem.qml</file>
+        <file>Design/Background.qml</file>
         <file>Design/ClientsList.qml</file>
         <file>Design/CallButton.qml</file>
         <file>Design/Authotization.qml</file>
