--- a/src/Client/qml.qrc
+++ b/src/Client/qml.qrc
@@ -5,5 +5,6 @@
         <file>Design/ClientsList.qml</file>
         <file>Design/CallButton.qml</file>
         <file>Design/Authotization.qml</file>
+        <file>Design/RefreshButton.qml</file>
     </qresource>
 </RCC>
