[ALL] Fix typos and add syntax replacements
1) Renamed authorization file;
2) Replaced header guards to pragma once

--- a/src/Client/qml.qrc
+++ b/src/Client/qml.qrc
@@ -4,7 +4,7 @@
         <file>Design/Background.qml</file>
         <file>Design/ClientsList.qml</file>
         <file>Design/CallButton.qml</file>
-        <file>Design/Authotization.qml</file>
+        <file>Design/Authorization.qml</file>
         <file>Design/RefreshButton.qml</file>
     </qresource>
 </RCC>
