[Client][UI] Removed extra connections, updated ui
1) Replaced connections by Q_INVOKABLE methods
2) Updated out/in-coming call and conversation items

--- a/src/Client/qml.qrc
+++ b/src/Client/qml.qrc
@@ -9,5 +9,7 @@
         <file>Design/Online/CallButton.qml</file>
         <file>Design/Authorization/Authorization.qml</file>
         <file>Design/InConversation/InConversation.qml</file>
+        <file>Design/IncomingCall/IncomingCall.qml</file>
+        <file>Design/OutgoingCall/OutgoingCall.qml</file>
     </qresource>
 </RCC>
