--- a/src/Client/qml.qrc
+++ b/src/Client/qml.qrc
@@ -11,5 +11,6 @@
         <file>Design/InConversation/InConversation.qml</file>
         <file>Design/IncomingCall/IncomingCall.qml</file>
         <file>Design/OutgoingCall/OutgoingCall.qml</file>
+        <file>Design/NotificationManager/NotificationManager.qml</file>
     </qresource>
 </RCC>
