--- a/src/Client/qml.qrc
+++ b/src/Client/qml.qrc
@@ -12,5 +12,7 @@
         <file>Design/IncomingCall/IncomingCall.qml</file>
         <file>Design/OutgoingCall/OutgoingCall.qml</file>
         <file>Design/NotificationManager/NotificationManager.qml</file>
+        <file>Sounds/IncomingCall.wav</file>
+        <file>Sounds/OutgoingCall.wav</file>
     </qresource>
 </RCC>
