[PeerToPeer][UI] Added missed calls
Added missed calls model-view

--- a/src/Client/qml.qrc
+++ b/src/Client/qml.qrc
@@ -14,5 +14,9 @@
         <file>Design/NotificationManager/NotificationManager.qml</file>
         <file>Sounds/IncomingCall.wav</file>
         <file>Sounds/OutgoingCall.wav</file>
+        <file>Design/MissedCalls/MissedCalls.qml</file>
+        <file>Design/MissedCalls/MissedCallsList.qml</file>
+        <file>Design/MissedCalls/CallButton.qml</file>
+        <file>Design/MissedCalls/ClearButton.qml</file>
     </qresource>
 </RCC>
